Fixed align bugs.

--- a/lunch-client/styles/pages/home.scss
+++ b/lunch-client/styles/pages/home.scss
@@ -82,8 +82,8 @@
         }
         @media (max-width: 400px) {
             position: relative;
-            margin: 0 20px;
-            padding: 30px 0 10px 0;
+            margin: 0 10px;
+            padding: 30px 0 0 0;
             border: none;
             border-top: 1px solid #ddd;
             width: 100%;
